--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ a {
 
 /* -------------------------------- */
 /* ------------- TAGS ------------- */
-/* -------------------------------- */
 
 body {
     background-color: #fff;
@@ -64,7 +63,6 @@ span {
 
 /* -------------------------------- */
 /* ---------- COMPONENTS ---------- */
-/* -------------------------------- */
 
 /* LOGO */
 .logo {
@@ -145,11 +143,9 @@ li::marker {
 }
 
 /* BRAND SECTION */
-.brand {
-    text-align: center;
-}
 .brand p {
     color: #000;
+    text-align: center;
     font-size: 18px;
     padding: 0 16px;
 }
@@ -180,13 +176,9 @@ li::marker {
 
 /* --------------------------------- */
 /* --------- FLEXBOX RULES --------- */
-/* --------------------------------- */
 
 .flex {
     display: flex;
-}
-.row {
-    flex-direction: row;
 }
 .col {
     flex-direction: column;
@@ -196,9 +188,6 @@ li::marker {
 }
 .aic {
     align-items: center;
-}
-.aife {
-    align-items: flex-end;
 }
 .jcsb {
     justify-content: space-between;
@@ -228,7 +217,6 @@ li::marker {
 
 /* -------------------------------- */
 /* HACK ICONS SWITCHING, Waiting JS */
-/* -------------------------------- */
 
 .none {
     display: none;
@@ -248,35 +236,30 @@ a.icon:hover i:last-child {
 
 /* ------------------------------- */
 /* --------- EASTER EGG ---------- */
-/* ------------------------------- */
-#user:hover + .easter-egg {
+
+#user:hover + .easter {
     bottom: -75vh;
 }
-#user:hover + .easter-egg + div {
+#user:hover + .easter + .egg {
     bottom: -95vh;
 }
-.easter-egg {
+.easter, .egg {
     position: absolute;
-    width: 100px;
-    height: 100px;
-    bottom: -120vh;
-    right: 24px;
-    background-image: url('assets/super-mario.png');
     background-size: contain;
     background-repeat: no-repeat;
-    -moz-transform: scale(-1, 1);
-    -o-transform: scale(-1, 1);
-    -webkit-transform: scale(-1, 1);
-    transform: scale(-1, 1);
-    transition: bottom 2s ease-in;
+    bottom: -250vh;
 }
-.easter-egg + div {
-    position: absolute;
+.easter {
+    width: 100px;
+    height: 100px;
+    right: 24px;
+    background-image: url('assets/super-mario.png');
+    transition: bottom 3s ease-in-out;
+}
+.egg {
     width: 150px;
     height: 150px;
-    bottom: -120vh;
     right: 0;
     background-image: url('assets/tube.png');
-    background-size: contain;
     transition: bottom 2s ease-in;
 }
