--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ section, aside {
 }
 
 aside {
-    min-width: 460px;
     border-left: 1px solid #ddd;
 }
 
@@ -55,12 +54,12 @@ h3 {
     font-size: 18px;
 }
 
-p, span, .bottom-link {
-    color: #767676;
-}
-
 span {
     font-size: 14px;
+}
+
+p, span, .bottom-link, .tabs {
+    color: #767676;
 }
 
 
@@ -115,13 +114,12 @@ span {
 
 /* TABS */
 .tabs {
-    color: #767676;
+    font-weight: bold;
+    text-transform: uppercase;
     border-bottom: 1px solid #ddd;
 }
 .tabs > * {
-    font-weight: bold;
     padding: 0 32px 16px;  
-    text-transform: uppercase;
 }
 .tabs > *:hover, .tabs .active {
     color: #000;
@@ -145,6 +143,9 @@ span {
 }
 .jcsb {
     justify-content: space-between;
+}
+.fbfull {
+    flex-basis: 100%;
 }
 .gap-xl {
     gap: 64px;
@@ -196,7 +197,13 @@ li::marker {
     color: #000;
     text-align: center;
     font-size: 18px;
-    padding: 0 16px;
+    padding: 0 32px;
+}
+.brand-icon {
+    font-size: 40px;
+}
+.fa-twitter {
+    color: #199BF0;
 }
 .brand-link {
     text-decoration: underline;
@@ -227,22 +234,19 @@ a.icon:hover i.none {
     bottom: -95vh;
 }
 .easter, .egg {
+    width: 150px;
+    height: 150px;
     position: absolute;
+    right: 0;
+    bottom: -250vh;
     background-size: contain;
     background-repeat: no-repeat;
-    bottom: -250vh;
 }
 .easter {
-    width: 100px;
-    height: 100px;
-    right: 24px;
-    background-image: url('assets/super-mario.png');
+    background-image: url('assets/sm.png');
     transition: bottom 3s 1s;
 }
 .egg {
-    width: 150px;
-    height: 150px;
-    right: 0;
-    background-image: url('assets/tube.png');
+    background-image: url('assets/tb.png');
     transition: bottom 1s 2s;
 }
